--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <button class="nav__burger-icon"><i class="fa-solid fa-bars"></i></button>
         <div class="nav__items">
             <button class="nav__close-icon"><i class="fa-solid fa-x"></i></button>
-            <a href="#">Główna</a>
-            <a href="#">Częstotliwość czytania</a>
+            <a href="index.html">Główna</a>
+            <a href="frequency.html">Częstotliwość czytania</a>
             <a href="#">Ulubieńcy ZST</a>
             <a href="#">Czemu czytasz?</a>
             <a href="#">Specyficzne informacje</a>
