created frequency sub-site

--- a/frequency.html
+++ b/frequency.html
@@ -27,10 +27,50 @@
         </div>
     </nav>
 
+    <header class="freq-header">
+        <h1 class="freq-header__heading">Częstotliwość czytania</h1>
+    </header>
+
+    <main class="freq-main">
+        <section class="freq-main__how-often-books freq-sect">
+            <div class="freq-main__card-graph">
+                <h2 class="freq-main__card-graph--heading">Jak często czytasz książki?</h2>
+                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+            </div>
+            <div class="freq-main__card-info"></div>
+        </section>
+        <section class="freq-main__how-often-schoolbooks freq-sect">
+            <div class="freq-main__card-graph">
+                <h2 class="freq-main__card-graph--heading">Jak często czytasz lektury szkolne?</h2>
+                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+            </div>
+            <div class="freq-main__card-info"></div>
+        </section>
+        <section class="freq-main__how-many freq-sect">
+            <div class="freq-main__card-graph">
+                <h2 class="freq-main__card-graph--heading">Ile książek przeczytałeś/aś w ostatnim roku?</h2>
+                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+            </div>
+            <div class="freq-main__card-info"></div>
+        </section>
+        <section class="freq-main__who-motivates freq-sect">
+            <div class="freq-main__card-graph">
+                <h2 class="freq-main__card-graph--heading">Kto cię motywuje do czytania?</h2>
+                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+            </div>
+            <div class="freq-main__card-info"></div>
+            
+        </section>
 
 
+    </main>
 
 
+    <footer>Aniela Kapłon, Sebastian Koniarz, Kacper Olszak</footer>
 
     <script src="script.js"></script>
 </body>
