--- a/frequency.html
+++ b/frequency.html
@@ -22,7 +22,7 @@
             <a href="index.html">Główna</a>
             <a href="frequency.html">Częstotliwość czytania</a>
             <a href="#">Ulubieńcy ZST</a>
-            <a href="#">Czemu czytasz?</a>
+            <a href="why_you_read.html">Czemu czytasz?</a>
             <a href="#">Specyficzne informacje</a>
         </div>
     </nav>
@@ -38,8 +38,13 @@
                 <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
                 <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
-            <div class="freq-main__card-info"></div>
-        </section>
+             <div class="freq-main__card-info">
+                <h2 class="freq-main__card-info--heading">siema</h2>
+                <p class="freq-main__card-info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem neque quidem incidunt nisi blanditiis fuga, deserunt ipsa doloremque praesentium quibusdam quod, tenetur adipisci ipsum impedit. Necessitatibus tempora exercitationem repudiandae, quibusdam, repellat quod quisquam perspiciatis suscipit consequuntur aperiam sequi ipsum? Saepe illo eos nesciunt adipisci tenetur praesentium nisi voluptatum perspiciatis officiis.</p>
+                
+            </div>
+            </section>
+            <!--
         <section class="freq-main__how-often-schoolbooks freq-sect">
             <div class="freq-main__card-graph">
                 <h2 class="freq-main__card-graph--heading">Jak często czytasz lektury szkolne?</h2>
@@ -64,7 +69,7 @@
             </div>
             <div class="freq-main__card-info"></div>
             
-        </section>
+        </section> -->
 
 
     </main>
