--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="index.html">Główna</a>
             <a href="frequency.html">Częstotliwość czytania</a>
             <a href="#">Ulubieńcy ZST</a>
-            <a href="#">Czemu czytasz?</a>
+            <a href="why_you_read.html">Czemu czytasz?</a>
             <a href="#">Specyficzne informacje</a>
         </div>
     </nav>
