frequency site fixed

--- a/frequency.html
+++ b/frequency.html
@@ -32,44 +32,65 @@
     </header>
 
     <main class="freq-main">
-        <section class="freq-main__how-often-books freq-sect">
-            <div class="freq-main__card-graph">
-                <h2 class="freq-main__card-graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
-                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+
+        <div class="freq-main__card" onclick="void(0)">
+
+            <div class="freq-main__card--graph">
+                <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
+                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
-             <div class="freq-main__card-info">
-                <h2 class="freq-main__card-info--heading">siema</h2>
-                <p class="freq-main__card-info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem neque quidem incidunt nisi blanditiis fuga, deserunt ipsa doloremque praesentium quibusdam quod, tenetur adipisci ipsum impedit. Necessitatibus tempora exercitationem repudiandae, quibusdam, repellat quod quisquam perspiciatis suscipit consequuntur aperiam sequi ipsum? Saepe illo eos nesciunt adipisci tenetur praesentium nisi voluptatum perspiciatis officiis.</p>
-                
+
+            <div class="freq-main__card--info">
+                <h2 class="freq-main__card--info--heading">siema</h2>
+                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
-            </section>
-            <!--
-        <section class="freq-main__how-often-schoolbooks freq-sect">
-            <div class="freq-main__card-graph">
-                <h2 class="freq-main__card-graph--heading">Jak często czytasz lektury szkolne?</h2>
-                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
-                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+
+        </div>
+        <div class="freq-main__card" onclick="void(0)">
+
+            <div class="freq-main__card--graph">
+                <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
+                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
-            <div class="freq-main__card-info"></div>
-        </section>
-        <section class="freq-main__how-many freq-sect">
-            <div class="freq-main__card-graph">
-                <h2 class="freq-main__card-graph--heading">Ile książek przeczytałeś/aś w ostatnim roku?</h2>
-                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
-                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+
+            <div class="freq-main__card--info">
+                <h2 class="freq-main__card--info--heading">siema</h2>
+                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
-            <div class="freq-main__card-info"></div>
-        </section>
-        <section class="freq-main__who-motivates freq-sect">
-            <div class="freq-main__card-graph">
-                <h2 class="freq-main__card-graph--heading">Kto cię motywuje do czytania?</h2>
-                <img class="freq-main__card-graph--img" src="../img/graph2.jpg" alt="wykres">
-                <p class="freq-main__card-graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+
+        </div>
+        <div class="freq-main__card" onclick="void(0)">
+
+            <div class="freq-main__card--graph">
+                <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
+                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
-            <div class="freq-main__card-info"></div>
-            
-        </section> -->
+
+            <div class="freq-main__card--info">
+                <h2 class="freq-main__card--info--heading">siema</h2>
+                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+
+        </div>
+        <div class="freq-main__card" onclick="void(0)">
+
+            <div class="freq-main__card--graph">
+                <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
+                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
+            </div>
+
+            <div class="freq-main__card--info">
+                <h2 class="freq-main__card--info--heading">siema</h2>
+                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+
+        </div>
+
+
 
 
     </main>
