frequency site fixed

--- a/frequency.html
+++ b/frequency.html
@@ -37,7 +37,7 @@
 
             <div class="freq-main__card--graph">
                 <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
                 <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
 
@@ -51,7 +51,7 @@
 
             <div class="freq-main__card--graph">
                 <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
                 <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
 
@@ -65,7 +65,7 @@
 
             <div class="freq-main__card--graph">
                 <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
                 <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
 
@@ -79,7 +79,7 @@
 
             <div class="freq-main__card--graph">
                 <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="../img/graph2.jpg" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
                 <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
 
