--- a/frequency.html
+++ b/frequency.html
@@ -21,9 +21,9 @@
             <button class="nav__close-icon"><i class="fa-solid fa-x"></i></button>
             <a href="index.html">Główna</a>
             <a href="frequency.html">Częstotliwość czytania</a>
-            <a href="#">Ulubieńcy ZST</a>
+            <a href="favourites.html">Ulubieńcy ZST</a>
             <a href="why_you_read.html">Czemu czytasz?</a>
-            <a href="#">Specyficzne informacje</a>
+            <a href="specific_info.html">Specyficzne informacje</a>
         </div>
     </nav>
 
