mobile first ended

--- a/favourites.html
+++ b/favourites.html
@@ -28,12 +28,97 @@
     </nav>
 
 
-    <header class="why-read-header">
-        <h1 class="why-read-header__heading"> Ulubieńcy... ;]</h1>
-
+    <header class="favourites-header">
+        <h1 class="favourites-header__heading"> Ulubieńcy... ;]</h1>
     </header>
 
-    <main>
+
+
+    <main class="fav-main">
+
+
+        <section class="fav-main__question">
+
+            <div class="fav-main__question--circle-box">
+                <h2 class="fav-main__question--heading">Czy masz ulubioną książkę?</h2>
+                <div class="fav-main__question--circle">
+                    <div class="fav-main__question--yes">
+                        <p>TAK <br> 20%</p>
+                    </div>
+                    <div class="fav-main__question--no">
+                        <p>NIE <br> 80%</p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="fav-main__question--podium-box">
+                <h2 class="fav-main__question--heading">Ulubione książki ZST</h2>
+                <div class="fav-main__question--podium">
+                    <div class="fav-main__question--podium--item2 fav-main__question--podium--item">
+                        <div class="fav-main__question--podium--item2-book fav-main__question--podium--item--book">
+                        </div>
+                        <p>2</p>
+                    </div>
+                    <div class="fav-main__question--podium--item1 fav-main__question--podium--item">
+                        <div class="fav-main__question--podium--item1-book fav-main__question--podium--item--book">
+                        </div>
+                        <p>1</p>
+                    </div>
+                    <div class="fav-main__question--podium--item3 fav-main__question--podium--item">
+                        <div class="fav-main__question--podium--item3-book fav-main__question--podium--item--book">
+                        </div>
+                        <p>3</p>
+                    </div>
+                </div>
+                <button class="fav-main__question--podium-btn fav-main__question--podium-btn1">Poznaj wyniki</button>
+            </div>
+
+        </section>
+
+        
+        <section class="fav-main__question">
+
+            <div class="fav-main__question--circle-box">
+                <h2 class="fav-main__question--heading">Czy masz ulubioną książkę?</h2>
+                <div class="fav-main__question--circle">
+                    <div class="fav-main__question--yes">
+                        <p>TAK <br> 20%</p>
+                    </div>
+                    <div class="fav-main__question--no">
+                        <p>NIE <br> 80%</p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="fav-main__question--podium-box">
+                <h2 class="fav-main__question--heading">Ulubione książki ZST</h2>
+                <div class="fav-main__question--podium">
+                    <div class="fav-main__question--podium--item2 fav-main__question--podium--item">
+                        <div class="fav-main__question--podium--item2-book fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        </div>
+                        <p>2</p>
+                    </div>
+                    <div class="fav-main__question--podium--item1 fav-main__question--podium--item">
+                        <div class="fav-main__question--podium--item1-book fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        </div>
+                        <p>1</p>
+                    </div>
+                    <div class="fav-main__question--podium--item3 fav-main__question--podium--item">
+                        <div class="fav-main__question--podium--item3-book fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        </div>
+                        <p>3</p>
+                    </div>
+                </div>
+                <button class="fav-main__question--podium-btn fav-main__question--podium-btn2">Poznaj wyniki</button>
+            </div>
+
+        </section>
+
+
+
+
 
     </main>
 
