almoste done, media queries and last section to do

--- a/favourites.html
+++ b/favourites.html
@@ -22,31 +22,29 @@
             <a href="index.html">Główna</a>
             <a href="frequency.html">Częstotliwość czytania</a>
             <a href="favourites.html">Ulubieńcy ZST</a>
-            <a href="why_you_read.html">Czemu czytasz?</a>
+            <a href="why_you_read.html">Powody czytania</a>
             <a href="specific_info.html">Specyficzne informacje</a>
         </div>
     </nav>
 
 
-    <header class="favourites-header">
-        <h1 class="favourites-header__heading"> Ulubieńcy... ;]</h1>
+    <header class="small-header">
+        <h1 class="small-header__heading"> Ulubieńcy ZST</h1>
     </header>
 
-
-
     <main class="fav-main">
-
 
         <section class="fav-main__question">
 
             <div class="fav-main__question--circle-box">
                 <h2 class="fav-main__question--heading">Czy masz ulubioną książkę?</h2>
+                
                 <div class="fav-main__question--circle">
                     <div class="fav-main__question--yes">
-                        <p>TAK <br> 20%</p>
+                        <p>TAK <br> 34,8%</p>
                     </div>
                     <div class="fav-main__question--no">
-                        <p>NIE <br> 80%</p>
+                        <p>NIE <br> 65,2%</p>
 
                     </div>
                 </div>
@@ -77,36 +75,39 @@
         </section>
 
         
+<div class="fav-main__line"></div>
+
+
         <section class="fav-main__question">
 
             <div class="fav-main__question--circle-box">
-                <h2 class="fav-main__question--heading">Czy masz ulubioną książkę?</h2>
+                <h2 class="fav-main__question--heading">Czy masz ulubionego autora?</h2>
                 <div class="fav-main__question--circle">
                     <div class="fav-main__question--yes">
-                        <p>TAK <br> 20%</p>
+                        <p>TAK <br> 18,8%</p>
                     </div>
                     <div class="fav-main__question--no">
-                        <p>NIE <br> 80%</p>
+                        <p>NIE <br> 81,2%</p>
 
                     </div>
                 </div>
             </div>
 
             <div class="fav-main__question--podium-box">
-                <h2 class="fav-main__question--heading">Ulubione książki ZST</h2>
+                <h2 class="fav-main__question--heading">Ulubieni autorzy ZST:</h2>
                 <div class="fav-main__question--podium">
                     <div class="fav-main__question--podium--item2 fav-main__question--podium--item">
-                        <div class="fav-main__question--podium--item2-book fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        <div class="fav-main__question--podium--item2-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
                         </div>
                         <p>2</p>
                     </div>
                     <div class="fav-main__question--podium--item1 fav-main__question--podium--item">
-                        <div class="fav-main__question--podium--item1-book fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        <div class="fav-main__question--podium--item1-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
                         </div>
                         <p>1</p>
                     </div>
                     <div class="fav-main__question--podium--item3 fav-main__question--podium--item">
-                        <div class="fav-main__question--podium--item3-book fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        <div class="fav-main__question--podium--item3-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
                         </div>
                         <p>3</p>
                     </div>
