--- a/frequency.html
+++ b/frequency.html
@@ -22,13 +22,13 @@
             <a href="index.html">Główna</a>
             <a href="frequency.html">Częstotliwość czytania</a>
             <a href="favourites.html">Ulubieńcy ZST</a>
-            <a href="why_you_read.html">Czemu czytasz?</a>
+            <a href="why_you_read.html">Powody czytania</a>
             <a href="specific_info.html">Specyficzne informacje</a>
         </div>
     </nav>
 
-    <header class="freq-header">
-        <h1 class="freq-header__heading">Częstotliwość czytania</h1>
+    <header class="small-header">
+        <h1 class="small-header__heading">Częstotliwość czytania</h1>
     </header>
 
     <main class="freq-main">
@@ -37,62 +37,69 @@
 
             <div class="freq-main__card--graph">
                 <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/how-often-books.png" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/how-often-books-description.png" alt="legenda">
                 <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
 
             <div class="freq-main__card--info">
-                <h2 class="freq-main__card--info--heading">siema</h2>
-                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <h2 class="freq-main__card--info--heading">WNIOSKI:</h2>
+                <ul class="freq-main__card--info--list">
+                    <li class="freq-main__card--info--list-item">
+                        <i class="fas fa-angle-double-right"></i> Najwięcej ankietowanych (33%) czyta książki raz lub
+                        kilka razy w roku.
+                    </li>
+                    <li class="freq-main__card--info--list-item"> <i class="fas fa-angle-double-right"></i>
+                        Najmniej ankietowanych czyta książki codziennie (8%) lub w ogóle nie czyta (11,6%).</li>
+                </ul>
             </div>
 
         </div>
         <div class="freq-main__card" onclick="void(0)">
 
             <div class="freq-main__card--graph">
-                <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
+                <h2 class="freq-main__card--graph--heading">Jak często czytasz lektury szkolne?</h2>
+                <img class="freq-main__card--graph--img" src="./img/how-often-school-books.png" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/how-many-books-year-description.png" alt="legenda">
                 <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
 
             <div class="freq-main__card--info">
-                <h2 class="freq-main__card--info--heading">siema</h2>
-                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <h2 class="freq-main__card--info--heading">WNIOSKI:</h2>
+                <ul class="freq-main__card--info--list">
+                    <li class="freq-main__card--info--list-item">
+                        <i class="fas fa-angle-double-right"></i> Najwięcej ankietowanych (41,1%) w ogóle nie czyta lektur szkolnych.
+                    </li>
+                    <li class="freq-main__card--info--list-item"> <i class="fas fa-angle-double-right"></i>
+                        Żaden z ankietowanych nie czyta lektur szkolnych codziennie.</li>
+                    <li class="freq-main__card--info--list-item"> <i class="fas fa-angle-double-right"></i>
+                        Bardzo mało ankietowanych (2,7%) czyta książki raz lub kilka razy w tygodniu.</li>
+                </ul>
             </div>
 
         </div>
         <div class="freq-main__card" onclick="void(0)">
 
             <div class="freq-main__card--graph">
-                <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
+                <h2 class="freq-main__card--graph--heading">Ile książek przeczytałeś/aś w ostatnim roku?</h2>
+                <img class="freq-main__card--graph--img" src="./img/how-many-books-year.png" alt="wykres">
+                <img class="freq-main__card--graph--img" src="./img/how-many-books-year-description.png" alt="legenda">
                 <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
             </div>
 
             <div class="freq-main__card--info">
-                <h2 class="freq-main__card--info--heading">siema</h2>
-                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <h2 class="freq-main__card--info--heading">WNIOSKI:</h2>
+                <ul class="freq-main__card--info--list">
+                    <li class="freq-main__card--info--list-item">
+                        <i class="fas fa-angle-double-right"></i> Większość spośród ankietowanych (53,6%) przeczytało od jednej do pięciu książek w ostatnim roku.
+                    </li>
+                    <li class="freq-main__card--info--list-item"> <i class="fas fa-angle-double-right"></i>
+                        Najmniej ankietowanych (3,6%) przeczytało od jedenastu do dwudziestu książek w ostatnim roku.</li>
+                    <li class="freq-main__card--info--list-item"> <i class="fas fa-angle-double-right"></i>
+                        Żadnej książki w ostatnim roku nie przeczytało aż 18,2% ankietowanych.</li>
+                </ul>
             </div>
-
         </div>
-        <div class="freq-main__card" onclick="void(0)">
-
-            <div class="freq-main__card--graph">
-                <h2 class="freq-main__card--graph--heading">Jak często czytasz książki?</h2>
-                <img class="freq-main__card--graph--img" src="./img/graph2.jpg" alt="wykres">
-                <p class="freq-main__card--graph--text"><i class="fas fa-angle-double-right"></i> Wnioski</p>
-            </div>
-
-            <div class="freq-main__card--info">
-                <h2 class="freq-main__card--info--heading">siema</h2>
-                <p class="freq-main__card--info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-
-        </div>
-
-
-
-
     </main>
 
 
