--- a/specific_info.html
+++ b/specific_info.html
@@ -22,14 +22,14 @@
             <a href="index.html">Główna</a>
             <a href="frequency.html">Częstotliwość czytania</a>
             <a href="favourites.html">Ulubieńcy ZST</a>
-            <a href="why_you_read.html">Czemu czytasz?</a>
+            <a href="why_you_read.html">Powody czytania</a>
             <a href="specific_info.html">Specyficzne informacje</a>
         </div>
     </nav>
 
 
-    <header class="spec-info-header">
-        <h1 class="spec-info-header__heading">Specyficzne pytania... ;]</h1>
+    <header class="small-header">
+        <h1 class="small-header__heading">Specyficzne pytania</h1>
     </header>
 
     <main class="spec-info-main">
@@ -37,22 +37,20 @@
         <section class="spec-info-main__message-box">
             <div class="spec-info-main__message-box--bubble spec-info-main__message-box--alt">
                 <div class="spec-info-main__message-box--text">
-                    <p class="spec-info-main__message-box--text--name spec-info-main__message-box--text--alt">Pytanie
+                    <p class="spec-info-main__message-box--text--name spec-info-main__message-box--text--alt">Pytanie 1
                     </p>
-                    <p class="spec-info-main__message-box--text--message">Nice... this will work great for my new
-                        project.</p>
-                    <span class="spec-info-main__message-box--text--timestamp">10:22 pm</span>
+                    <p class="spec-info-main__message-box--text--message">Cos tam?</p>
+                    <span class="spec-info-main__message-box--text--timestamp"></span>
                 </div>
                 <div class="spec-info-main__message-box--bubble-arrow spec-info-main__message-box--arrow-alt"></div>
             </div>
 
             <div class="spec-info-main__message-box--bubble">
                 <div class="spec-info-main__message-box--text">
-                    <p class="spec-info-main__message-box--text--name">Pytanie
+                    <p class="spec-info-main__message-box--text--name">Ankietowany 34
                     </p>
-                    <p class="spec-info-main__message-box--text--message">Nice... this will work great for my new
-                        project.</p>
-                    <span class="spec-info-main__message-box--text--timestamp">10:22 pm</span>
+                    <p class="spec-info-main__message-box--text--message">Wyjebac lektury.</p>
+                    <span class="spec-info-main__message-box--text--timestamp">50% ankietowanych</span>
                 </div>
                 <div class="spec-info-main__message-box--bubble-arrow"></div>
             </div>
