--- a/why_you_read.html
+++ b/why_you_read.html
@@ -22,56 +22,125 @@
             <a href="index.html">Główna</a>
             <a href="frequency.html">Częstotliwość czytania</a>
             <a href="favourites.html">Ulubieńcy ZST</a>
-            <a href="why_you_read.html">Czemu czytasz?</a>
+            <a href="why_you_read.html">Powody czytania</a>
             <a href="specific_info.html">Specyficzne informacje</a>
         </div>
     </nav>
 
 
-    <header class="why-read-header">
-        <h1 class="why-read-header__heading">Czemu uczniowie czytają książki?</h1>
+    <header class="small-header">
+        <h1 class="small-header__heading">powody czytania książek</h1>
     </header>
 
     <main class="why-read-main">
         <section class="why-read-main__benefits">
-            <h2 class="why-read-main__benefits--heading m">Jakie korzyści z czytania książek?</h2>
+            <h2 class="why-read-main__benefits--heading m">Jakie korzyści czepiesz z czytania książek?</h2>
             <div class="why-read-main__benefits--box">
                 <div class="why-read-main__benefits--line"></div>
                 <ul class="why-read-main__benefits--list">
-                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>dupa</li>
-                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>dupa</li>
-                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>dupa</li>
-                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>dupa</li>
-                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>dupa</li>
-                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>dupa</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Rozrywka
+                        (20,4%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Pozyskiwanie
+                        wiedzy na dany temat (16,3%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Rozwijanie
+                        wyobraźni oraz kreatywności (13,3%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Redukcja
+                        stresu (12,2%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Rozwijanie
+                        umiejętności językowych (10,7%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Umiejętność
+                        szybszego czytania (10%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Poprawa
+                        samodyscypliny (8,5%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Brak korzyści
+                        (8,2%)</li>
+                    <li class="why-read-main__benefits--li-item"><i class="fas fa-angle-double-right"></i>Lepsze oceny
+                        (0,4%)</li>
                 </ul>
             </div>
         </section>
 
+
+        <section class="why-read-main__benefits why-read-main__benefits--description">
+            <h2 class="why-read-main__benefits--heading why-read-main__benefits--heading--description">Wnioski:</h2>
+            <p>
+                Wśród ankietowanych najczęściej pojawiającą się korzyścią czytania książek jest rozrywka.
+                <br>
+                <br>
+                Kolejnymi często występującymi zaletami są pozyskiwanie wiedzy na dany temat oraz rozwijanie
+                wyobraźni i kreatywności.
+                <br>
+                <br>
+                Najrzadziej podawaną odpowiedzią są lepsze oceny.
+            </p>
+
+        </section>
+
+
+
         <section class="why-read-main__encore">
 
-<h2 class="why-read-main__encore--heading">Jak można zachęcić...?</h2>
+            <h2 class="why-read-main__encore--heading">Jak można zachęcić do czytania książek?</h2>
 
             <div class="why-read-main__encore--cloud-box">
 
-<div class="why-read-main__encore--cloud">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptates.</p>
-</div>
-<div class="why-read-main__encore--cloud">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptates.</p>
-</div>
-<div class="why-read-main__encore--cloud">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptates.</p>
-</div>
-<div class="why-read-main__encore--cloud">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptates.</p>
-</div>
-<div class="why-read-main__encore--cloud">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptates.</p>
-</div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,, [...] można byłoby co jakiś czas rozwieszać plakaty po np. 3 tytuły książek razem z krótkim
+                        streszczeniem do wstępnej fabuły ujętym w jak najciekawszy sposób. [...] "</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,, [...] Według mnie aby zachęcić innych do czytania nie należy tych osób do tego zmuszać bo
+                        osiągamy odwrotny skutek."</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,,Lepsza dostępność audiobooków/ebooków. Przedstawianie młodzieży książek jako dobrej rozrywki, a
+                        nie tylko jako obowiązek w postaci nudnych lektur szkolnych"</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,,Przystępność, sposób na dokładniejsze dopasowanie konkretnej książki do naszych upodobań lub
+                        zainteresowań"</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,,Gdyby nie było nacisku na uczniów od najmłodszych lat na czytanie książek które ich nie
+                        interesują znacznie większa ich część sama by po nie sięgała i czuła byłaby zachęcona tym co
+                        książka może oferować w fabule. W ten sposób jest postrzegane jako kolejna obowiązek a nie
+                        przyjemność."</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,,Zmiana nudnych i przeżytych lektur na bardziej nowoczesne i aktualne. Zmniejszenie ilości
+                        książek."</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,,Dobrym pomysłem było by również aby zarys lektury (kiedy się dzieje, o czym opowiada, w jakiej
+                        sytuacji była pisana itp.) był opowiadany przez nauczyciela jeszcze przed jej zadaniem. W ten
+                        sposób nauczyciel mógłby zachęcić ucznia tematyką danej książki i dzięki temu uczeń przeczytał
+                        by lekturę."</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,,Wyrzucenie na kartkówkach/sprawdzianach z lektury zbędnych i nic nie wnoszących pytań, które w
+                        nikłym bądź w bardzo małym stopniu dodawały coś do fabuły książki np: (jaka dana postać miała
+                        guziki w koszuli itp)."</p>
+                </div>
+                <div class="why-read-main__encore--cloud">
+                    <p>,,Więcej ekranizacji książek, oraz tworzenia gier które by mogły zachęcić młodsze społeczeństwo
+                        do czytania"</p>
+                </div>
 
 
             </div>
+
+            <section class="why-read-main__benefits--description">
+                <h2 class="why-read-main__benefits--heading why-read-main__benefits--heading--description">Wnioski:</h2>
+                <p>
+                    Każdy spośród ankietowanych przedstawił inny sposób zachęcania do czytania książek.
+                    <br>
+                    <br>
+                    Najczęściej w
+                    swoich odpowiedziach ankietowani poruszali tematykę lektur szkolnych. Dwudziestu trzech czytelników ZST negatywnie wypowiadało się na ten temat. Uważają oni, że zmiany w systemie edukacji
+                    spowodowałyby wzrost zainteresowania literaturą.
+                </p>
+
+            </section>
 
         </section>
 
