almoste done, media queries and last section to do

--- a/specific_info.html
+++ b/specific_info.html
@@ -49,7 +49,7 @@
                 <div class="spec-info-main__message-box--text">
                     <p class="spec-info-main__message-box--text--name">Ankietowany 34
                     </p>
-                    <p class="spec-info-main__message-box--text--message">Wyjebac lektury.</p>
+                    <p class="spec-info-main__message-box--text--message">kochać lektury.</p>
                     <span class="spec-info-main__message-box--text--timestamp">50% ankietowanych</span>
                 </div>
                 <div class="spec-info-main__message-box--bubble-arrow"></div>
